# robotic_ultrasound_thesis

./: README.md
robotic_ultrasound_vision/: 4feb_dense_demo.csv  4feb_male_demo.csv  CMakeLists.txt  package.xml
robotic_ultrasound_vision/data_analysis/: blue_line_errors.py  blue_line_plotter.py  computation_aggregate_components.py  computation_logger.py  computation_table_aggregated.py  computation_table_component.py  error_tracking.py  filtered_traj.csv  registration_accuracy.py  tracking_error_boxplots.py  tracking_error_jerk_plots.py  visualize_demo.py
robotic_ultrasound_vision/data_analysis/computation_csvs/: 14feb_generalize_comp_1+2.csv  14feb_generalize_comp_3+4+5.csv  14feb_generalize_comp_6.csv  14feb_generalize_comp_7.csv  18feb_mean_comp_times.csv  T20_computation_times_1.csv  T20_computation_times_2.csv  T20_computation_times_3.csv  T20_computation_times_4.csv  T20_computation_times_5.csv  computation_times_metrics_3.csv  computation_times_metrics_4.csv  computation_times_metrics_5.csv
robotic_ultrasound_vision/data_analysis/computation_results/: aggregated_scenario_computation.csv  scenario_computation_summary.csv  structured_scenario_computation.csv  structured_scenario_computation_detailed.csv  (+1 more)
robotic_ultrasound_vision/realsense_vision/: pcd_helpers.py  realsense_blueline.py  realsense_mediapipe.py  realsense_phantom.py  registration_utils.py  trajectory_relay_breathing.py  trajectory_relay_rigid.py
robotic_ultrasound_vision/registration_files/: 20jan_static_demo.csv  20jan_static_pointcloud.pcd  male_pointcloud.pcd  registration_male_female.py
(+371 files in other folders)
