<?xml version="1.0"?>
<package format="2">
  <name>realsense</name>
  <version>0.0.1</version>
  <description>Package for launching RealSense ROS nodes and custom scripts</description>
  <maintainer email="tkoelmans@tudelft.nl">Toine Koelmans</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>realsense2_description</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>

  <!-- Run dependencies -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>

</package>